--- a/src/main/java/com/mycompany/nimgame/HomePage.form
+++ b/src/main/java/com/mycompany/nimgame/HomePage.form
@@ -124,9 +124,8 @@
               <Font name="Verdana" size="12" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="D:\nimGame\src\main\java\images\bg.png"/>
+              <Image iconType="2" name="D:\NLCSN\nimGame\src\main\java\com\mycompany\images\bg.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="bg0"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
